# snek.io

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  make-client  make-server  player.cpp  player.hpp
client/: assets.cpp  assets.hpp  button.cpp  button.hpp  c_config.txt  entity.hpp  game.cpp  game.hpp  main.cpp  player.cpp  player.hpp  scene.cpp  scene.hpp  scene_error.cpp  scene_error.hpp  scene_main.cpp  scene_main.hpp  scene_nickname.cpp  scene_nickname.hpp  server.hpp  server_handler.cpp  server_handler.hpp  utility.cpp  utility.hpp
common/: common_utility.cpp  common_utility.hpp  config.cpp  config.hpp
lib/SFML-3.0.0/macos/SFML.framework/Versions/3.0.0/: SFML
lib/SFML-3.0.0/macos/SFML.framework/Versions/3.0.0/Resources/CMake/: SFMLSharedTargets-release.cmake  SFMLSharedTargets.cmake
lib/SFML-3.0.0/macos/include/SFML/Graphics/: RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Texture.hpp  VertexBuffer.hpp
lib/SFML-3.0.0/macos/include/SFML/System/: Time.hpp
lib/SFML-3.0.0/macos/include/SFML/Window/: Joystick.hpp  Keyboard.hpp  Mouse.hpp  Sensor.hpp  Touch.hpp  Window.hpp
lib/SFML-3.0.0/macos/lib/: libsfml-audio-d.3.0.0.dylib  libsfml-audio.3.0.0.dylib  libsfml-graphics-d.3.0.0.dylib  libsfml-graphics.3.0.0.dylib  libsfml-network-d.3.0.0.dylib  libsfml-network.3.0.0.dylib  libsfml-system-d.3.0.0.dylib  libsfml-system.3.0.0.dylib  libsfml-window-d.3.0.0.dylib  libsfml-window.3.0.0.dylib
lib/SFML-3.0.0/macos/lib/cmake/SFML/: SFMLSharedTargets-debug.cmake  SFMLSharedTargets-release.cmake  SFMLSharedTargets.cmake
lib/SFML-3.0.0/macos/sfml-audio.framework/Versions/3.0.0/: sfml-audio
lib/SFML-3.0.0/macos/sfml-graphics.framework/Versions/3.0.0/: sfml-graphics
lib/SFML-3.0.0/macos/sfml-network.framework/Versions/3.0.0/: sfml-network
lib/SFML-3.0.0/macos/sfml-system.framework/Versions/3.0.0/: sfml-system
lib/SFML-3.0.0/macos/sfml-window.framework/Versions/3.0.0/: sfml-window
lib/SFML-3.0.0/windoez/lib/cmake/SFML/: SFMLSharedTargets-debug.cmake  SFMLSharedTargets-release.cmake  SFMLSharedTargets.cmake  SFMLStaticTargets-release.cmake  SFMLStaticTargets.cmake
server/: cliencior.hpp  cliencior_uni_linu_macc.hpp  client.hpp  client_handler.cpp  client_handler.hpp  client_session.cpp  client_session.hpp  game.cpp  game.hpp  main.cpp  player.cpp  player.hpp  s_config.txt  server.cpp  server.hpp  utility.cpp  utility.hpp  vector2.hpp  vector2f.cpp  vector2f.hpp  vector_2f.cpp  vector_2f.hpp
